--- a/css/style_todo.css
+++ b/css/style_todo.css
@@ -1,7 +1,7 @@
 
 .todo{
-  width: 380px;
-  height:200px;
+  width: 180px;
+  height:90px;
   min-height: 45px;
   background-image: url('../img/bg2.jpg');
   background-size: 100% 200%;
@@ -74,13 +74,15 @@
   cursor: pointer;
 }
 
-.todo p.text{
+.todo textarea{
   position: absolute;
+  width:165px; 
+  height: 40px;
   padding:0;
   margin:0;
-  font-size: 20px;
+  /* font-size: 10px; */
   left:5px;
-  top:35px;
+  top:40px;
   background-color: #FFF;
   max-width:285px;
 }
