--- a/css/style_todo.css
+++ b/css/style_todo.css
@@ -1,5 +1,5 @@
 
-.todo{
+.todoDiv{
   width: 180px;
   height:90px;
   min-height: 45px;
@@ -13,7 +13,7 @@
   margin: 0;
 }
 
-.todo.placeholder{
+.todoDiv.placeholder{
   width: 180px;
   height:40px;
   min-height: 45px;
@@ -27,7 +27,7 @@
   margin: 0;
 }
 
-.todo i.edit{
+.todoDiv i.edit{
   position: absolute;
   font-size: 20px;
   padding-left:2px;
@@ -35,7 +35,7 @@
   top:5px;
 }
 
-.todo i.prio{
+.todoDiv i.prio{
   position: absolute;
   font-size: 20px;
   padding-left:10px;
@@ -43,7 +43,7 @@
   top:5px;
 }
 
-.todo i.delete{
+.todoDiv i.delete{
   position: absolute;
   font-size: 20px;
   padding-left:10px;
@@ -51,7 +51,7 @@
   top:5px;
 }
 
-.todo i.done{
+.todoDiv i.done{
   position: absolute;
   font-size: 20px;
   padding-left:10px;
@@ -59,7 +59,7 @@
   top:5px;
 }
 
-.todo i.undone{
+.todoDiv i.undone{
   position: absolute;
   font-size: 20px;
   padding-left:10px;
@@ -67,28 +67,28 @@
   top:5px;
 }
 
-.todo i.edit:hover{
+.todoDiv i.edit:hover{
   color:#af2290;
   cursor: pointer;
 }
-.todo i.prio:hover{
+.todoDiv i.prio:hover{
   color:#6eb200;
   cursor: pointer;
 }
-.todo i.delete:hover{
+.todoDiv i.delete:hover{
   color:#af0000;
   cursor: pointer;
 }
-.todo i.done:hover{
+.todoDiv i.done:hover{
   color:#6eb200;
   cursor: pointer;
 }
-.todo i.undone:hover{
+.todoDiv i.undone:hover{
   color:#af0000;
   cursor: pointer;
 }
 
-.todo textarea{
+.todoDiv textarea{
   position: absolute;
   width:165px; 
   height: 40px;
