--- a/css/style_matrix.css
+++ b/css/style_matrix.css
@@ -1,4 +1,30 @@
-.matrix { background: slateblue; }
+.matrix { 
+    background: slateblue; 
+    display: flex;
+}
+
+todoColumnsDiv { 
+    background: black; 
+    
+    
+    
+}
+
+
+.todoColumnDiv { 
+    background-color: green; 
+    min-width: 250px;
+    max-width: 350px;
+    float: left; /* Dadurch sind die Columns nebeneinander */
+    height: 100vh;
+    
+    
+    
+    margin: 0px 10px; /* oben seitlich */
+    width: 15%; 
+}
+
+
+
 .backbutton { float: left; width: 45px; background: pink; }
-.todoColumnDiv { float: left; width: 15%; background: pink; }
-.forwardbutton { float: left; width: 50px; background: wheat; }
+.forwardbutton { float: left; width: 50px; background: pink; }
