--- a/css/style.css
+++ b/css/style.css
@@ -9,88 +9,5 @@
     z-index: 1000; /* Hat wohl was damit zu tun, dass immer im Vorderung ... Ebenen?? */
   }
 
-  .button-toggle-config {
-    width: 40px;
-    height: 100%;
-    background-color: coral;
-    background-image: url("./../img/menu-alt-512.png");
-    background-repeat: no-repeat;
-    background-size: 40%;
-    background-position: center;
-    cursor: pointer;
-  }
-
-
-  .button-toggle-config:hover {
-    opacity: 0.7;
-  }
-
-  .nav-main ul {
-    display: flex;
-    flex-wrap: wrap; /* was macht das ? */
-    padding-left: 15px;
-    
-  }
-
-
-  .nav-main ul li {
-    list-style: none; /* Keine Punkte usw.  */
-    line-height: 40px;
-  }
-
-  .nav-main ul li a{
-    display: block;
-    height: 100%;
-    padding: 0 10px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #111;
-    font-family: Arial;
-    font-size: 12px;
-  }
-
-
-  .nav-sidebar {
-    float: left;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 30px;
-    padding: 0 5px;
-    height: calc(100vh - 40px);
-    background-color: #111;
-    z-index: 1000; /* Hat wohl was damit zu tun, dass immer im Vorderung ... Ebenen?? */
-    transition: all 0.3s ease-in-out;
-  }
-
-  .nav-sidebar ul{
-    padding: 15px 0;
-    overflow: hidden; /* Wenn der Inhalt größer ist als der Container, dann wird der Inhalt abgeschniten*/
-    visibility: hidden;
-  }
-
-  
-  .nav-sidebar ul li{
-    line-height: 40px;
-    list-style: none;
-    
-  }
-  
-  .nav-sidebar ul span, .nav-sidebar ul li a{
-    display: block;
-    height: 40px;
-    padding: 0 10px;
-    color: white;
-    font-family: Arial;
-    font-size: 12px;
-    text-decoration: none;
-    white-space: nowrap;
-    opacity: 0;
-    transition: all 0.3s ease-in-out;
-  }
-
-  .nav-sidebar ul li a:hover{
-    color: darkgray;
-  }
-
- 
+.backbutton { float: left; width: 45px; background: pink; }
+.forwardbutton { float: left; width: 50px; background: pink; }
