--- a/css/style_todo.css
+++ b/css/style_todo.css
@@ -6,26 +6,13 @@
   background-image: url('../img/bg2.jpg');
   background-size: 100% 200%;
   background-repeat: no-repeat;
-  border-radius: 15px 15px 0 0;
+  border-radius: 15px;
   position: relative;
   border-bottom: 1px solid rgba(0,0,0,0.1);
   padding: 0;
   margin: 0;
 }
 
-.todoDiv.placeholder{
-  width: 180px;
-  height:40px;
-  min-height: 45px;
-  background-image: url('../img/bg2.jpg');
-  background-size: 100% 200%;
-  background-repeat: no-repeat;
-  border-radius: 15px 15px 0 0;
-  position: relative;
-  border-bottom: 1px solid rgba(0,0,0,0.1);
-  padding: 0;
-  margin: 0;
-}
 
 .todoDiv i.edit{
   position: absolute;
