--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -80,6 +80,12 @@
     font-size: 12px;
   }
 
+/*
+
+Sidebar
+
+*/
+
 
   .nav-sidebar {
     float: left;
@@ -87,7 +93,7 @@
     left: 0;
     bottom: 0;
     width: 30px;
-    padding: 0 5px;
+    top: 40px;
     height: calc(100vh - 40px);
     background-color: #111;
     z-index: 1000; /* Hat wohl was damit zu tun, dass immer im Vorderung ... Ebenen?? */
